@@ -1,163 +1,162 @@
 package org.example.rowingcoaching.service;
 
 import lombok.RequiredArgsConstructor;
-import org.example.rowingcoaching.dto.request.CreateWorkoutRequest;
-import org.example.rowingcoaching.dto.request.CreateWorkoutSegmentRequest;
+import org.example.rowingcoaching.dto.WorkoutDTO;
+import org.example.rowingcoaching.dto.WorkoutResultDTO;
+import org.example.rowingcoaching.dto.request.*;
 import org.example.rowingcoaching.mapper.WorkoutMapper;
 import org.example.rowingcoaching.model.User;
 import org.example.rowingcoaching.model.Workout;
-import org.example.rowingcoaching.model.WorkoutSegment;
 import org.example.rowingcoaching.repository.UserRepository;
 import org.example.rowingcoaching.repository.WorkoutRepository;
-import org.example.rowingcoaching.repository.WorkoutSegmentRepository;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class WorkoutService {
 
     private final WorkoutRepository workoutRepository;
-    private final WorkoutSegmentRepository segmentRepository;
     private final UserRepository userRepository;
     private final WorkoutMapper workoutMapper;
 
     @Transactional
-    public Workout createWorkout(CreateWorkoutRequest request) {
-        User user = userRepository.findById(request.getUserId())
-                .orElseThrow(() -> new RuntimeException("User not found"));
-
-        // Validate segments
-        validateSegments(request.getSegments());
-
-        // Create main workout
-        Workout workout = workoutMapper.fromCreateRequest(request, user);
-        workout = workoutRepository.save(workout);
-
-        // Create and save segments
-        List<WorkoutSegment> segments = createAndSaveSegments(request.getSegments(), workout);
+    public Workout createWorkout(CreateWorkoutRequest request, User currentUser) {
+        Workout workout = workoutMapper.fromCreateRequest(request, currentUser);
         
-        // Set segments and calculate totals
-        workout.setSegments(segments);
-        calculateAndUpdateTotals(workout);
+        // If coach is assigning to an athlete
+        if (request.getAthleteId() != null) {
+            User athlete = userRepository.findById(request.getAthleteId())
+                    .orElseThrow(() -> new RuntimeException("Athlete not found"));
+            workout.setAthlete(athlete);
+            workout.setCoach(currentUser);
+            workout.setStatus(Workout.WorkoutStatus.ASSIGNED);
+        }
         
         return workoutRepository.save(workout);
     }
 
-    private List<WorkoutSegment> createAndSaveSegments(List<CreateWorkoutSegmentRequest> segmentRequests, Workout workout) {
-        List<WorkoutSegment> segments = segmentRequests.stream()
-                .map(segmentRequest -> createSegment(segmentRequest, workout))
-                .toList();
+    @Transactional
+    public Workout startWorkout(Long workoutId, User currentUser) {
+        Workout workout = workoutRepository.findById(workoutId)
+                .orElseThrow(() -> new RuntimeException("Workout not found"));
         
-        return segmentRepository.saveAll(segments);
+        // Verify user has permission to start this workout
+        if (!workout.getAthlete().getId().equals(currentUser.getId())) {
+            throw new RuntimeException("You can only start your own workouts");
+        }
+        
+        if (workout.getStatus() != Workout.WorkoutStatus.CREATED && 
+            workout.getStatus() != Workout.WorkoutStatus.ASSIGNED) {
+            throw new RuntimeException("Workout cannot be started in its current state");
+        }
+        
+        workout.setStatus(Workout.WorkoutStatus.IN_PROGRESS);
+        workout.setStartedAt(LocalDateTime.now());
+        
+        return workoutRepository.save(workout);
     }
 
-    private WorkoutSegment createSegment(CreateWorkoutSegmentRequest request, Workout workout) {
-        WorkoutSegment segment = new WorkoutSegment();
-        segment.setWorkout(workout);
-        segment.setType(request.getType());
-        segment.setOrderIndex(request.getOrderIndex());
-        segment.setDuration(request.getDuration());
-
-        if (request.getType() == WorkoutSegment.SegmentType.WORKOUT) {
-            // For workout segments, validate that either distance OR duration is provided
-            if (request.getDistance() == null && request.getDuration() == null) {
-                throw new IllegalArgumentException("For workout segments, either distance or duration must be provided");
-            }
-            if (request.getDistance() != null && request.getDuration() != null) {
-                throw new IllegalArgumentException("For workout segments, only one of distance or duration should be provided");
-            }
-
-            segment.setDistance(request.getDistance());
-            segment.setStrokeRate(request.getStrokeRate());
-            segment.setPace(request.getPace());
-
-            // Calculate missing field based on pace
-            if (request.getDistance() != null && request.getDuration() == null && request.getPace() != null) {
-                // Calculate duration from distance and pace
-                double durationSeconds = (request.getDistance() / 500.0) * request.getPace();
-                segment.setDuration((int) Math.round(durationSeconds));
-            } else if (request.getDuration() != null && request.getDistance() == null && request.getPace() != null) {
-                // Calculate distance from duration and pace
-                double distanceMeters = (request.getDuration() / request.getPace()) * 500.0;
-                segment.setDistance((int) Math.round(distanceMeters));
-            }
-        } else {
-            // For rest segments, only duration is valid
-            if (request.getDistance() != null || request.getStrokeRate() != null || request.getPace() != null) {
-                throw new IllegalArgumentException("Rest segments should only have duration");
-            }
-            segment.setDistance(null);
-            segment.setStrokeRate(null);
-            segment.setPace(null);
+    @Transactional
+    public Workout completeWorkout(Long workoutId, CompleteWorkoutRequest request, User currentUser) {
+        Workout workout = workoutRepository.findById(workoutId)
+                .orElseThrow(() -> new RuntimeException("Workout not found"));
+        
+        // Verify user has permission to complete this workout
+        if (!workout.getAthlete().getId().equals(currentUser.getId())) {
+            throw new RuntimeException("You can only complete your own workouts");
         }
-
-        return segment;
+        
+        if (workout.getStatus() != Workout.WorkoutStatus.IN_PROGRESS) {
+            throw new RuntimeException("Workout must be in progress to be completed");
+        }
+        
+        // Set workout results
+        CompleteWorkoutRequest.WorkoutResult result = request.getResult();
+        workout.setTotalDistance(result.getTotalDistance());
+        workout.setTotalTime(result.getTotalTime());
+        workout.setAveragePace(result.getAveragePace());
+        workout.setAverageSplit(result.getAverageSplit());
+        workout.setCalories(result.getCalories());
+        workout.setAverageStrokeRate(result.getAverageStrokeRate());
+        
+        workout.setStatus(Workout.WorkoutStatus.COMPLETED);
+        workout.setCompletedAt(LocalDateTime.now());
+        
+        return workoutRepository.save(workout);
     }
 
-    private void validateSegments(List<CreateWorkoutSegmentRequest> segments) {
-        if (segments == null || segments.isEmpty()) {
-            throw new IllegalArgumentException("At least one segment is required");
+    @Transactional
+    public Workout assignWorkout(Long workoutId, AssignWorkoutRequest request, User coach) {
+        Workout workout = workoutRepository.findById(workoutId)
+                .orElseThrow(() -> new RuntimeException("Workout not found"));
+        
+        // Verify coach has permission to assign this workout
+        if (!workout.getCoach().getId().equals(coach.getId())) {
+            throw new RuntimeException("You can only assign workouts you created");
         }
-
-        // Check for duplicate order indices
-        long uniqueOrderIndices = segments.stream()
-                .mapToInt(CreateWorkoutSegmentRequest::getOrderIndex)
-                .distinct()
-                .count();
-        if (uniqueOrderIndices != segments.size()) {
-            throw new IllegalArgumentException("Order indices must be unique");
-        }
+        
+        User athlete = userRepository.findById(request.getAthleteId())
+                .orElseThrow(() -> new RuntimeException("Athlete not found"));
+        
+        workout.setAthlete(athlete);
+        workout.setStatus(Workout.WorkoutStatus.ASSIGNED);
+        
+        return workoutRepository.save(workout);
     }
 
-    private void calculateAndUpdateTotals(Workout workout) {
-        List<WorkoutSegment> workoutSegments = workout.getSegments().stream()
-                .filter(segment -> segment.getType() == WorkoutSegment.SegmentType.WORKOUT)
-                .toList();
+    public List<WorkoutDTO> getMyWorkouts(User currentUser) {
+        List<Workout> workouts = workoutRepository.findByAthleteIdOrderByCreatedAtDesc(currentUser.getId());
+        return workouts.stream()
+                .map(workoutMapper::toDTO)
+                .collect(Collectors.toList());
+    }
 
-        // Calculate totals
-        int totalDistance = workoutSegments.stream()
-                .mapToInt(segment -> segment.getDistance() != null ? segment.getDistance() : 0)
-                .sum();
+    public List<WorkoutDTO> getAssignedWorkouts(User currentUser) {
+        List<Workout> workouts = workoutRepository.findByAthleteIdAndStatusInOrderByCreatedAtDesc(
+                currentUser.getId(), 
+                List.of(Workout.WorkoutStatus.ASSIGNED, Workout.WorkoutStatus.IN_PROGRESS)
+        );
+        return workouts.stream()
+                .map(workoutMapper::toDTO)
+                .collect(Collectors.toList());
+    }
 
-        int totalDuration = workout.getSegments().stream()
-                .mapToInt(WorkoutSegment::getDuration)
-                .sum();
+    public List<WorkoutResultDTO> getWorkoutResults(User currentUser) {
+        List<Workout> completedWorkouts = workoutRepository.findByAthleteIdAndStatusOrderByCompletedAtDesc(
+                currentUser.getId(), 
+                Workout.WorkoutStatus.COMPLETED
+        );
+        return completedWorkouts.stream()
+                .map(workoutMapper::toResultDTO)
+                .collect(Collectors.toList());
+    }
 
-        double averagePace = 0.0;
-        int averageStrokeRate = 0;
-        int workoutSegmentCount = workoutSegments.size();
+    public List<WorkoutDTO> getWorkoutsAssignedByCoach(User coach) {
+        List<Workout> workouts = workoutRepository.findByCoachIdOrderByCreatedAtDesc(coach.getId());
+        return workouts.stream()
+                .map(workoutMapper::toDTO)
+                .collect(Collectors.toList());
+    }
 
-        if (workoutSegmentCount > 0) {
-            double totalPace = workoutSegments.stream()
-                    .mapToDouble(segment -> segment.getPace() != null ? segment.getPace() : 0.0)
-                    .sum();
-            averagePace = totalPace / workoutSegmentCount;
-
-            int totalStrokeRate = workoutSegments.stream()
-                    .mapToInt(segment -> segment.getStrokeRate() != null ? segment.getStrokeRate() : 0)
-                    .sum();
-            averageStrokeRate = totalStrokeRate / workoutSegmentCount;
+    public WorkoutDTO getWorkoutById(Long workoutId, User currentUser) {
+        Workout workout = workoutRepository.findById(workoutId)
+                .orElseThrow(() -> new RuntimeException("Workout not found"));
+        
+        // Verify user has permission to view this workout
+        if (!workout.getAthlete().getId().equals(currentUser.getId()) && 
+            !workout.getCoach().getId().equals(currentUser.getId())) {
+            throw new RuntimeException("You don't have permission to view this workout");
         }
-
-        workout.setTotalDistance(totalDistance);
-        workout.setTotalDuration(totalDuration);
-        workout.setAveragePace(averagePace);
-        workout.setAverageStrokeRate(averageStrokeRate);
+        
+        return workoutMapper.toDTO(workout);
     }
 
     public Workout saveWorkout(Workout workout) {
         return workoutRepository.save(workout);
-    }
-
-    public List<Workout> getWorkoutsByUser(Long userId) {
-        return workoutRepository.findByAthleteId(userId);
-    }
-
-    public Workout getWorkoutById(Long workoutId) {
-        return workoutRepository.findById(workoutId)
-                .orElseThrow(() -> new RuntimeException("Workout not found"));
     }
 }
